<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021
  ~ project: MyEvents
  ~ by: hudashafoot
  -->
<layout>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.more.MoreFragment">

        <include
            android:id="@+id/toolbarView"
            layout="@layout/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{@string/settings}" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nightModeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fields_margin_top"
            android:paddingTop="@dimen/fields_margin_top"
            android:paddingBottom="@dimen/fields_margin_top"
            android:text="@string/dark_mode"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="@id/startGuidLine"
            app:layout_constraintTop_toBottomOf="@id/toolbarView" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/nightModeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/nightModeTv"
            app:layout_constraintEnd_toEndOf="@id/endGuidLine"
            app:layout_constraintTop_toTopOf="@id/nightModeTv"
            app:thumbTint="@color/switch_color"
            app:trackTint="@color/grayUnActiveColor" />

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grayUnActiveColor"
            app:layout_constraintEnd_toEndOf="@id/endGuidLine"
            app:layout_constraintStart_toStartOf="@id/startGuidLine"
            app:layout_constraintTop_toBottomOf="@id/nightModeTv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/languageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/fields_margin_top"
            android:paddingBottom="@dimen/fields_margin_top"
            android:text="@string/change_language"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="@id/startGuidLine"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/otherLanguageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textColor="@color/grayUnActiveColor"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@id/languageTxt"
            app:layout_constraintEnd_toEndOf="@id/endGuidLine"
            app:layout_constraintTop_toTopOf="@id/languageTxt"
            tools:text="@string/english" />

        <View
            android:id="@+id/languageLine"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grayUnActiveColor"
            app:layout_constraintEnd_toEndOf="@id/endGuidLine"
            app:layout_constraintStart_toStartOf="@id/startGuidLine"
            app:layout_constraintTop_toBottomOf="@id/languageTxt" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuidLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuidLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.946" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>